# 5-Day-AI-Agents-Intensive-Vibe-Coding-Course-With-Google

./: README.md
Day1/Codelabs/Build and Deploy Web App/6136ba9a-7f88-4f86-ab3e-06e9bbd42328/: implementation_plan.md  implementation_plan.md.metadata.json  task.md  task.md.metadata.json  walkthrough.md  walkthrough.md.metadata.json
Day1/Codelabs/Build and Deploy Web App/google-cloud-serverless-app/: Dockerfile  deploy.ps1  deploy.sh  main.py  requirements.txt  test_local.py  verify_pipeline.py
Day1/Codelabs/Deploy from AI Studio to Cloud Run/: README.md  index.html  metadata.json
Day1/Codelabs/Deploy from AI Studio to Cloud Run/src/: App.tsx  index.css  types.ts
Day1/Codelabs/Getting Started with Google Antigravity/my-first-project/: index.js  package-lock.json  package.json
Day2/Codelabs/Google Developer Knowledge MCP/google-developer-knowledge/: README.md  upload_to_drive.py
Day2/Codelabs/Hands-on with Antigravity CLI/agy-cli-projects/: news.txt  news_summary.txt
Day3/Codelabs/Authoring Google Antigravity Skills/antigravity-skills/: product_model.py
Day3/Codelabs/Vibe Coding AI Agents/agents-cli/: .agents-cli-spec.md
Day4/Codelabs/Expense-approval agent/ambient-expense-agent/: Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
Day4/Codelabs/Vibecode and Secure/: setup.ps1
Day5/Codelabs/Deploy And Host AI Agent/expense-agent/: pyproject.toml  (+6 more)
Day5/Codelabs/Deploy And Host AI Agent/expense-agent/submission_frontend/: main.py  pyproject.toml
Day5/Codelabs/Deploy And Host AI Agent/expense-agent/submission_frontend/templates/: index.html
(+100 files in other folders)
